...
                                                    <action selector="tappedNumberButton:" destination="eqK-jh-KKu" eventType="touchUpInside" id="Ovc-Qq-WYV"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uDx-go-qku">
                                                <rect key="frame" x="0.0" y="162" width="105.33333333333333" height="30"/>
                                                <color key="backgroundColor" red="0.3538607359" green="0.4105627537" blue="0.49413287639999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                <state key="normal" title="Clear">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="tappedClearButton:" destination="eqK-jh-KKu" eventType="touchUpInside" id="naN-mF-8Rt"/>
                                                </connections>
                                            </button>
...
